BDD :  + modif clé primaire table administrateur  + modif script   =>   DROP DATABASE + CREATE DATABASE
PHP :
 + créer un administrateur
 + redirection vers bon lien en cas de saisie mauvais lien
 + bug fixes

--- a/util/cssGeneral.css
+++ b/util/cssGeneral.css
@@ -23,15 +23,16 @@ fieldset {
 label {
 	background:transparent none;
 	display: block;
-	width: 20%;
+	width: 30%;
 	float: left;
-	padding-right: 1%;
+	padding-left: 2%;
+	padding-right: 2%;
 	text-align: left;
 }
 
 input, select {
 	margin-left: 1%;
-	width: 30%;
+	width: 40%;
 	border: #CCC 1px solid;
 }
 
